--- a/src/blocks/social/styles/style.scss
+++ b/src/blocks/social/styles/style.scss
@@ -15,10 +15,12 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 		margin: 3px 6px 3px 0;
 	}
 
-	// Fallback color to match core button block.
-	.wp-block-button__link:not(.has-background) {
-		background-color: #31373c;
-	}
+	// &:not(.is-style-mask) {
+		// Fallback color to match core button block.
+		.wp-block-button__link:not(.has-background) {
+			background-color: #31373c;
+		}
+	// }
 
 	&__button {
 		align-items: center;
@@ -88,6 +90,13 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 				background-color: $color;
 			}
 		}
+
+		@each $icon, $color in $icons {
+
+			&.is-style-mask .wp-block-coblocks-social__button--#{$icon} {
+				color: $color;
+			}
+		}
 	}
 
 	// Default style.
@@ -122,6 +131,42 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 
 		.wp-block-coblocks-social__text {
 			margin-left: 0;
+		}
+	}
+
+	// Mask style.
+	&.is-style-mask {
+
+		li {
+			margin: 0 6px !important;
+		}
+
+		.wp-block-coblocks-social__button {
+			background: transparent;
+			padding: 0 !important;
+		}
+
+		.wp-block-button__link:not(.has-background) {
+			color: #31373c;
+		}
+
+		.wp-block-coblocks-social__text {
+			margin-left: 0;
+		}
+
+		.wp-block-coblocks-social__icon {
+			height: 32px;
+			width: 32px;
+		}
+
+		&.has-button-size-sml .wp-block-coblocks-social__icon {
+			height: 20px;
+			width: 20px;
+		}
+
+		&.has-button-size-lrg .wp-block-coblocks-social__icon {
+			height: 40px;
+			width: 40px;
 		}
 	}
 
