--- a/src/blocks/social/styles/editor.scss
+++ b/src/blocks/social/styles/editor.scss
@@ -1,50 +1,77 @@
 .wp-block-coblocks-social {
 
 	&__button {
-		// padding-bottom: 12px;
 
 		&:active {
 			animation: none !important;
 		}
+	}
+
+	&__text {
+		top: initial;
 	}
 }
 
 .editor-block-preview__content {
 
 	.wp-block-coblocks-social {
+		align-content: center;
+		align-items: center;
+		display: flex;
+		height: 100%;
+		justify-content: center;
+		text-align: center !important;
 
-		&__text {
-			max-width: 50%;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
+		&.is-style-mask {
+
+			.wp-block-coblocks-social__icon {
+				position: relative;
+				top: 4px;
+			}
 		}
 
-		&.is-style-icon {
+		&.is-style-text,
+		&.is-style-icon-and-text {
 
 			.wp-block-coblocks-social__button {
-				width: 100%;
+				width: 75%;
+			}
+
+		}
+
+		&.is-style-icon-and-text {
+
+			.wp-block-coblocks-social__text {
+				margin-left: 4px;
 			}
 		}
 
 		li {
 			display: none;
+			margin: 0;
+
+			&:first-child {
+				display: block;
+			}
 		}
 
-		li:first-child {
-			display: block;
-			margin-top: 14px;
+		&__text {
+			max-width: 70%;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
 		&__button {
 			max-width: 100%;
 			margin: 0;
-			padding-top: 12px;
-			padding-bottom: 12px;
+			width: 100%;
+			padding-left: 10px;
+			padding-right: 10px;
 		}
 	}
 }
 
-.components-coblocks-inspector__social-button-size {
+.components-range-control + .components-coblocks-inspector__social-button-size {
 	margin-top: -13px !important;
 }
