--- a/src/blocks/accordion-item/styles/editor.scss
+++ b/src/blocks/accordion-item/styles/editor.scss
@@ -14,6 +14,10 @@
 		}
 	}
 
+	&__text {
+		color: #191e23;
+	}
+
 	&--open &__title,
 	&.is-selected &__title {
 		border-radius: $accordion-border-radius $accordion-border-radius 0 0;
