--- a/src/blocks/accordion-item/styles/style.scss
+++ b/src/blocks/accordion-item/styles/style.scss
@@ -56,7 +56,7 @@
 		border: 1px solid currentColor;
 		margin-top: -1px;
 
-		&:not(.has-text-color) {
+		&:not(.has-border-color) {
 			color: $accordion-background;
 		}
 	}
@@ -64,7 +64,7 @@
 	&__text {
 		margin-top: 0;
 		margin-bottom: 0.25em;
-		color: #333;
+		color: #191e23;
 
 		&:last-of-type {
 			margin-bottom: 0;
