--- a/src/blocks/pricing-table-item/styles/style.scss
+++ b/src/blocks/pricing-table-item/styles/style.scss
@@ -1,57 +1,64 @@
 .wp-block-coblocks-pricing-table-item {
-	margin-bottom: 1rem;
+	margin: 0 0 15px;
 	padding: 4em 1.8em;
 	position: relative;
+
+	@media (min-width: 600px) {
+		flex-basis: 0;
+		flex-grow: 1;
+		margin: 15px;
+		max-width: 100%;
+	}
 
 	&:not(.has-background) {
 		background: hsla(240, 5%, 57%, 0.1);
 	}
 
-	.pricing-table {
-
-		&__title {
-			margin-top: 0;
-			margin-right: 0;
-			margin-left: 0;
-			padding: 0;
+	&:last-child {
+		@media (max-width: 599px) {
+			margin-bottom: 0;
 		}
+	}
 
-		&__price {
-			line-height: 1;
-			position: relative;
-			display: flex;
-		}
+	&__title {
+		margin-top: 0;
+		padding: 0;
+	}
 
-		&__currency {
-			font-size: 1em;
-		}
+	&__price-wrapper {
+		display: flex;
+		line-height: 1;
+		position: relative;
+	}
 
-		&__amount {
-			font-size: 5em;
-			letter-spacing: normal;
-			line-height: 1 !important;
+	&__currency {
+		font-size: 1em;
+	}
+
+	&__amount {
+		font-size: 5em;
+		letter-spacing: normal;
+		line-height: 1 !important;
+		margin: 0;
+		padding: 0;
+	}
+
+	& &__features {
+		margin: 0 0 30px;
+		max-width: none;
+		padding: 0;
+
+		ul,
+		li {
+			list-style: none;
 			margin: 0;
 			padding: 0;
 		}
+	}
 
-		&__features {
-			margin: 0;
-			padding: 0;
-			max-width: none;
-
-			ul,
-			li {
-				list-style: none;
-				margin: 0;
-				padding: 0;
-			}
-		}
-
-		&__title,
-		&__price,
-		&__features {
-			margin-bottom: 2rem;
-		}
+	& &__title,
+	& &__price-wrapper {
+		margin-bottom: 20px;
 	}
 
 	.wp-block-button {
@@ -59,10 +66,10 @@
 	}
 }
 
-.pricing-table--center .pricing-table__price {
+.has-center-content .wp-block-coblocks-pricing-table-item__price-wrapper {
 	justify-content: center;
 }
 
-.pricing-table--right .pricing-table__price {
+.has-right-content .wp-block-coblocks-pricing-table-item__price-wrapper {
 	justify-content: flex-end;
 }
