Add Email icon to Social block

--- a/src/blocks/social/styles/style.scss
+++ b/src/blocks/social/styles/style.scss
@@ -1,5 +1,5 @@
 // Supported icons.
-$icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( linkedin, #0077b5 ), ( tumblr, #34465d ), ( reddit, #ff5700 );
+$icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( linkedin, #0077b5 ), ( tumblr, #34465d ), ( reddit, #ff5700 ), ( email, #2880E5 );
 
 .wp-block-coblocks-social {
 
