Change h4 to span (Pricing Table Item)

--- a/src/blocks/pricing-table-item/styles/editor.scss
+++ b/src/blocks/pricing-table-item/styles/editor.scss
@@ -19,6 +19,10 @@
 		height: 100%;
 	}
 
+	.editor-rich-text__tinymce[data-is-placeholder-visible=true]+.editor-rich-text__tinymce {
+		padding-right: 0 !important;
+	}
+
 	.editor-inner-blocks {
 
 		.editor-block-list__insertion-point {
