--- a/src/blocks/accordion-item/styles/editor.scss
+++ b/src/blocks/accordion-item/styles/editor.scss
@@ -1,6 +1,15 @@
 .wp-block-coblocks-accordion-item {
 	margin-bottom: 0;
 
+	.editor-block-list__block-edit {
+		margin-top: 14px !important;
+		margin-bottom: 14px !important;
+	}
+
+	.editor-block-list__layout .editor-block-list__block>.editor-block-list__block-edit:before {
+		outline: none;
+	}
+
 	&__title {
 		cursor: inherit;
 		padding: 10px 15px !important;
@@ -12,6 +21,10 @@
 		&:focus {
 			outline: none;
 		}
+	}
+
+	&__content {
+		padding: 0 13px;
 	}
 
 	&--open &__title,
