--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -1,5 +1,9 @@
 .wp-block[data-type="coblocks/accordion"] {
 
+	.editor-block-list__layout .editor-block-list__block>.editor-block-list__block-edit:before {
+		outline: none;
+	}
+
 	.wp-block[data-type="coblocks/accordion-item"] {
 		margin-top: 0 !important;
 
