Minor touchups to innerBlocks accordion

--- a/src/blocks/accordion-item/styles/editor.scss
+++ b/src/blocks/accordion-item/styles/editor.scss
@@ -6,6 +6,10 @@
 		margin-bottom: 13px !important;
 	}
 
+	.editor-inner-blocks {
+		margin-left: -2px;
+	}
+
 	.editor-default-block-appender__content {
 		margin-top: 14px !important;
 		margin-bottom: 13px !important;
