--- a/src/blocks/pricing-table-item/styles/editor.scss
+++ b/src/blocks/pricing-table-item/styles/editor.scss
@@ -11,16 +11,31 @@
 				display: inline-block;
 			}
 		}
+
+		&__features {
+			margin: 0 0 30px;
+		}
 	}
 
 	.editor-block-list__block-edit {
-		margin-bottom: 12px;
+		margin-bottom: 26px;
 		margin-top: 12px;
 		height: 100%;
+
+		> div {
+			@media (min-width: 600px) {
+				height: 100%;
+				display: flex;
+			}
+		}
 	}
 
-	.editor-rich-text__tinymce[data-is-placeholder-visible=true]+.editor-rich-text__tinymce {
+	.editor-rich-text__tinymce[data-is-placeholder-visible="true"] + .editor-rich-text__tinymce {
 		padding-right: 0 !important;
+	}
+
+	.editor-block-list__layout .editor-block-list__block > .editor-block-list__block-edit::before {
+		outline: none;
 	}
 
 	.editor-inner-blocks {
