--- a/src/blocks/pricing-table-item/styles/style.scss
+++ b/src/blocks/pricing-table-item/styles/style.scss
@@ -4,7 +4,7 @@
 	position: relative;
 
 	@media (min-width: 600px) {
-		flex-basis: 0;
+		flex-basis: 40%;
 		flex-grow: 1;
 		margin: 15px;
 		max-width: 100%;
