--- a/src/blocks/gif/styles/editor.scss
+++ b/src/blocks/gif/styles/editor.scss
@@ -30,6 +30,10 @@
 			}
 		}
 
+		.components-spinner {
+			margin: 16px auto 0;
+		}
+
 		&__results {
 			display: flex;
 			flex-direction: row;
@@ -41,7 +45,7 @@
 			max-width: 430px;
 
 			li {
-				padding: 2px;
+				padding: 3px;
 				margin: 0;
 				flex: 0 0 auto;
 				display: block;
@@ -60,7 +64,7 @@
 				}
 
 				img {
-					border-radius: 3px;
+					border-radius: 4px;
 					width: 100%;
 					height: 100%;
 				}
