--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,11 +23,12 @@
 }
 
 //Utility Classes
-.coblocks__heading--no-bottom-spacing{
-	margin-bottom: 0px !important;
-	padding-bottom: 0px !important;
+.coblocks__heading--no-bottom-spacing {
+	margin-bottom: 0 !important;
+	padding-bottom: 0 !important;
 }
-.coblocks__heading--no-top-spacing{
-	margin-top: 0px !important;
-	padding-top: 0px !important;
+
+.coblocks__heading--no-top-spacing {
+	margin-top: 0 !important;
+	padding-top: 0 !important;
 }
