--- a/src/blocks/accordion/accordion-item/styles/editor.scss
+++ b/src/blocks/accordion/accordion-item/styles/editor.scss
@@ -15,6 +15,10 @@
 		margin-bottom: 13px !important;
 	}
 
+	.editor-inserter__toggle:not([aria-expanded="true"]) {
+		opacity: 1 !important;
+	}
+
 	.editor-block-list__layout .editor-block-list__block > .editor-block-list__block-edit::before {
 		outline: none;
 	}
