--- a/src/blocks/click-to-tweet/styles/style.scss
+++ b/src/blocks/click-to-tweet/styles/style.scss
@@ -16,7 +16,7 @@
 			display: inline-block;
 			height: 24px;
 			left: 0;
-			mask-image: url(images/twitter.svg);
+			mask-image: url(images/social/twitter.svg);
 			opacity: 0.3;
 			position: absolute;
 			top: 5px;
@@ -61,7 +61,7 @@
 			display: inline-block;
 			height: 18px;
 			margin-right: 5px;
-			mask-image: url(images/twitter.svg);
+			mask-image: url(images/social/twitter.svg);
 			position: relative;
 			top: 4px;
 			width: 18px;
