Fix logo color issue

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -50,7 +50,7 @@
 }
 
 .coblocks-logo--svg {
-	fill: #536dff;
+	color: #536dff;
 	position: relative;
 
 	&.components-panel__icon {
@@ -58,6 +58,7 @@
 		top: 1px;
 	}
 }
+
 
 // Style our custom colored icons like the default icons.
 .coblocks__svg {
