--- a/src/styles/style/_margin.scss
+++ b/src/styles/style/_margin.scss
@@ -1,3 +1,11 @@
+.mb-0 {
+	margin-bottom: 0 !important;
+}
+
+.mt-0 {
+	margin-top: 0 !important;
+}
+
 .has-small-margin {
 	margin-bottom: 14px;
 	margin-top: 14px;
