More style clean ups

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,23 +1,12 @@
-// Background classes
+// Background
 @import "style/background-classes";
-
-// Background overlay
 @import "style/background-overlay";
-
-// Background parallax
 @import "style/background-parallax";
 
-// Button styles
-@import "style/button";
-
-// Editor formatting
+// Formatting
 @import "style/formatting";
 
 // Utility classes
 @import "style/padding";
 @import "style/margin";
 @import "style/max-width";
-
-.has-shadow {
-	box-shadow: 0 1.5vw 3vw -0.7vw rgba(0, 0, 0, 0.125);
-}
