Remove admin and welcome scss

--- a/src/common.scss
+++ b/src/common.scss
@@ -15,6 +15,7 @@ $lightred: #f9e2e2;
 $lightgreen: #eff9f1;
 $darkgreen: #337f46;
 $darkred: #a00;
+$green: #4ab866;
 $white: #fff;
 $lightgray: rgba(0, 0, 0, 0.15);
 
