--- a/src/styles/editor/_icons.scss
+++ b/src/styles/editor/_icons.scss
@@ -1,6 +1,6 @@
 // The icon that displays on the CoBlocks block inserter category.
 .coblocks-logo--svg {
-	color: $coblocks;
+	fill: $coblocks;
 	position: relative;
 
 	&.components-panel__icon {
@@ -15,12 +15,12 @@
 	.components-panel &,
 	.components-toolbar &,
 	.editor-block-navigation__item & {
-		color: #555d66;
+		color: $dark-gray-500;
 	}
 }
 
 .editor-block-icon.has-colors::after {
-	color: #555d66;
+	color: $dark-gray-500;
 }
 
 .edit-post-pinned-plugins .components-icon-button svg.coblocks-logo--svg--sidebar,
