--- a/src/styles/editor/_inspector-tabs.scss
+++ b/src/styles/editor/_inspector-tabs.scss
@@ -53,13 +53,13 @@
 			background: #fafafa;
 			border-color: #999;
 			box-shadow: inset 0 -1px 0 #999;
-			color: #555d66;
+			color: $dark-gray-500;
 			cursor: pointer;
 		}
 
 		&.is-active {
-			background: #555d66;
-			border-color: #555d66;
+			background: $dark-gray-500;
+			border-color: $dark-gray-500;
 			color: $white;
 			z-index: 1;
 
